/*
 * Copyright (c) 2024-present NAVER Corp
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package proto;
option go_package="pkg/lobster/proto";

import "google/protobuf/timestamp.proto";

service ChunkService {
  rpc GetChunksWithinRange(Request) returns (Response) {}
  rpc GetChunk(Request) returns (Response) {}
}

message Request {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
  ProtoSource source = 3;
  string pod_uid = 4;
  string container = 5;
}

message Response {
  repeated ProtoChunk ProtoChunk = 1;
}


message ProtoChunk {
    string id = 1;
    string cluster = 2;
    string namespace = 3; 
    map<string,string> labels = 4;
    string set_name = 5;
    string pod = 6;
    string pod_uid = 7;
    string container = 8;
    ProtoSource source = 9;
    repeated ProtoBlock blocks = 10;
    ProtoTempBlock temp_block = 11;
    google.protobuf.Timestamp started_at = 12;
    google.protobuf.Timestamp updated_at = 13;
    int64 line = 16;
    int64 size = 17;
    string relative_pod_dir = 18;
    string relative_block_dir = 19;
    
}

message ProtoBlock {
    google.protobuf.Timestamp started_at = 1;
    google.protobuf.Timestamp ended_at = 2;
    int64 line = 3;
    int64 size = 4;
    int64 file_num = 5;
}

message ProtoTempBlock {
    google.protobuf.Timestamp started_at = 1;
    google.protobuf.Timestamp ended_at = 2;
    int64 line = 3;
    int64 size = 4;
    int64 file_num = 5;
}

message ProtoSource {
    string type = 1;
    string path = 2;
}
